--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
+    <div class="container">
+        <header>
             <div class="logo">NORDSER</div>
-            <nav>
-                <a href="#">Flytt</a>
-                <a href="#">Contact us</a>
-            </nav>
-        </div>
-    </header>
+                <nav>
+                    <a href="#">Flytt</a>
+                    <a href="#">Contact us</a>
+                </nav>
+        </header>                
+    </div>
 
     <main class="container">
         <section class="hero">
-            <h1>Convenience at your service</h1>
+            <h1>Convenience at<br>your service</h1>
             <h2>Transforming essential services through innovation, sustainability, and convenience, making life easier and better for everyone.</h2>
         </section>
 
@@ -49,10 +49,11 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
+    <div class="container">
+        <footer>
+            <hr />
             <p>© 2024 NORDSER AS</p>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
