--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">NORDSER</div>
-                <nav>
-                    <a href="#">Flytt</a>
-                    <a href="#">Contact us</a>
-                </nav>
+            <div class="logo">
+                <img src="resources/nordser-logo.png" alt="Nordser Logo">
+            </div>
+            <nav>
+                <a href="#">Flytt</a>
+                <a href="#">Contact us</a>
+            </nav>
         </header>                
     </div>
 
@@ -38,13 +40,14 @@
 
         <section class="cards">
             <div class="card blue">
-                <h4>Flytt</h4>
+                <h4>
+                    <img src="resources/flytt-logo.png" alt="Flytt Logo">
+                </h4>
                 <p>Flytt is Nordser's leading delivery service, designed to make moving things easy and stress-free. Whether it's a couch or your whole apartment, Flytt has you covered.</p>
                 <a href="#">Visit Flytt</a>
             </div>
             <div class="card orange">
                 <h4>Coming Soon</h4>
-                <p></p>
             </div>
         </section>
     </main>
