--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <img src="resources/nordser-logo.png" alt="Nordser Logo">
             </div>
             <nav>
-                <a href="#">Flytt</a>
-                <a href="#">Contact us</a>
+                <a href="https://flytt.net">Flytt</a>
+                <a href="mailto:contact@nordser.com">Contact</a>
             </nav>
-        </header>                
+        </header>
     </div>
 
     <main class="container">
@@ -44,7 +44,7 @@
                     <img src="resources/flytt-logo.png" alt="Flytt Logo">
                 </h4>
                 <p>Flytt is Nordser's leading delivery service, designed to make moving things easy and stress-free. Whether it's a couch or your whole apartment, Flytt has you covered.</p>
-                <a href="#">Visit Flytt</a>
+                <a href="https://flytt.net">Visit Flytt</a>
             </div>
             <div class="card orange">
                 <h4>Coming Soon</h4>
