--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <nav>
                 <a href="https://flytt.net">Flytt</a>
-                <a href="mailto:contact@nordser.com">Contact</a>
+                <a href="mailto:info@nordser.com">Contact</a>
             </nav>
         </header>
     </div>
