Improve content and layout

--- a/index.html
+++ b/index.html
@@ -21,33 +21,33 @@
 
     <main class="container">
         <section class="hero">
-            <h1>Convenience at<br>your service</h1>
-            <h2>Transforming essential services through innovation, sustainability, and convenience, making life easier and better for everyone.</h2>
+            <h1>Convenience at<br>Your Service</h1>
+            <h2>Transforming essential services through convenience, community, and sustainability.</h2>
         </section>
 
         <section class="content">
-            <h3>Innovating for Simplicity</h3>
-            <p>Life is complicated, but essential tasks shouldn’t be. At Nordser, we turn everyday chores into enjoyable experiences. We handle the hard work so you can focus on what matters most.</p>
+            <h3>Effortless Living</h3>
+            <p>Life can be complicated, but your daily tasks shouldn't be. At Nordser, we transform everyday chores into effortless experiences. Let us handle the hard work, so you can focus on what matters most.</p>
 
             <h3>Empowering Communities</h3>
-            <p>Nordser creates job opportunities that empower people and strengthen local economies. Our jobs are flexible and rewarding, fitting into your lifestyle. By supporting local communities and providing meaningful work, we help build a more connected and inclusive society.</p>
+            <p>We create opportunities that empower individuals and strengthen local economies. Our flexible and rewarding roles fit seamlessly into your lifestyle. Together, we build stronger, more connected communities.</p>
 
             <h3>Embracing Circularity</h3>
-            <p>We support a circular economy by making it easy to move second-hand goods, reducing waste and promoting reuse. By choosing Nordser, you are helping to create a better environment, one service at a time.</p>
-            
-            <p>Welcome to Nordser. Convenience at your service.</p>
+            <p>Imagine a world where everything has a second life. We make it easy to move second-hand goods, enhancing their value and extending their lifecycle. By choosing us, you help create a better environment, one service at a time.</p>
+
+            <p>Welcome to Nordser. Let's create meaningful change together.</p>            
         </section>
 
         <section class="cards">
-            <div class="card blue">
+            <a href="https://flytt.net" class="card blue card-link">
                 <h4>
                     <img src="resources/flytt-logo.png" alt="Flytt Logo">
                 </h4>
-                <p>Flytt is Nordser's leading delivery service, designed to make moving things easy and stress-free. Whether it's a couch or your whole apartment, Flytt has you covered.</p>
-                <a href="https://flytt.net">Visit Flytt</a>
-            </div>
+                <p>Flytt is Nordser's flagship delivery service, designed to make moving effortless. From a single piece of furniture to your entire apartment, we manage your move with ease and care.</p>
+            </a>
             <div class="card orange">
                 <h4>Coming Soon</h4>
+                <p>Stay tuned for more innovative services from Nordser, aimed at simplifying your life and empowering your community.</p>
             </div>
         </section>
     </main>
