--- a/index.html
+++ b/index.html
@@ -7,55 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="logo">
-                <img src="resources/nordser-logo.png" alt="Nordser Logo">
-            </div>
-            <nav>
-                <a href="https://flytt.net">Flytt</a>
-                <a href="mailto:info@nordser.com">Contact</a>
-            </nav>
-        </header>
-    </div>
-
     <main class="container">
         <section class="hero">
-            <h1>Convenience at<br>Your Service</h1>
-            <h2>Transforming essential services through convenience, community, and sustainability.</h2>
-        </section>
-
-        <section class="content">
-            <h3>Effortless Living</h3>
-            <p>Life can be complicated, but your daily tasks shouldn't be. At Nordser, we transform everyday chores into effortless experiences. Let us handle the hard work, so you can focus on what matters most.</p>
-
-            <h3>Empowering Communities</h3>
-            <p>We create opportunities that empower individuals and strengthen local economies. Our flexible and rewarding roles fit seamlessly into your lifestyle. Together, we build stronger, more connected communities.</p>
-
-            <h3>Embracing Circularity</h3>
-            <p>Imagine a world where everything has a second life. We make it easy to move second-hand goods, enhancing their value and extending their lifecycle. By choosing us, you help create a better environment, one service at a time.</p>
-
-            <p>Welcome to Nordser. Let's create meaningful change together.</p>            
-        </section>
-
-        <section class="cards">
-            <a href="https://flytt.net" class="card blue card-link">
-                <h4>
-                    <img src="resources/flytt-logo.png" alt="Flytt Logo">
-                </h4>
-                <p>Flytt is Nordser's flagship delivery service, designed to make moving effortless. From a single piece of furniture to your entire apartment, we manage your move with ease and care.</p>
-            </a>
-            <div class="card orange">
-                <h4>Coming Soon</h4>
-                <p>Stay tuned for more innovative services from Nordser, aimed at simplifying your life and empowering your community.</p>
-            </div>
+            <h1>Coming soon.</h1>
         </section>
     </main>
 
     <div class="container">
         <footer>
             <hr />
-            <p>© 2024 NORDSER AS</p>
+            <p>© 2025 NORDSER AS</p>
         </footer>
     </div>
 </body>
